--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <input type="text" placeholder="Search">
                 <button><i class="material-icons">search</i></button>
             </form>
-            <i class="material-icons">mic</i>
+            <i class="material-icons mic">mic</i>
         </div>
         <div class="right-section">
+            <a href=""><i class="material-icons">video_call</i></a>
             <a href=""><i class="material-icons">apps</i></a>
             <a href=""><i class="material-icons">notifications</i></a>
             <a href=""><i class="material-icons">account_circle</i></a>
