complete main section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,252 @@
                 
             </nav>
         </aside>
+
+        <main>
+            <div class="video-container">
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>625K Views • 4 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video1.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot Currency Conversion back-end with spring-boot Currency Conversion back-end with spring-boot Currency Conversion back-end with spring-boot  
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>625K Views • 4 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <div class="thumbnail">
+                        <img src="images/video2.jpg" alt="">
+                    </div>
+                    <div class="video-details">
+                        <div class="creator-img">
+                            <img src="images/mohamed.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <a href="" class="video-title">
+                                Currency Conversion back-end with spring-boot 
+                            </a>
+                            <a href="" class="video-creator">
+                                Mohamed Al-Sharqawi
+                            </a>
+                            <span>100M Views • 11 Months Ago</span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </main>
     </div>
 </body>
 </html>
